--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "gh-pages": "^5.0.0",
-    "lodash": "^4.17.21"
+    "jsdom": "^16.4.0",
+    "lodash": "^4.17.21",
+    "text-encoding": "^0.7.0"
   }
 }
